--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -403,7 +403,7 @@
               <hr>
               <h4>Accounts Usage</h4>
 
-              <table class="table table-stripped table-condensed">
+              <table datatable="ng" dt-options="accountsDtOptions" class="table table-stripped table-condensed order-column">
                 <thead>
                   <tr>
                     <th style="width: 20%">Account</th>
