--- a/code/parts/reports/usage-web.html
+++ b/code/parts/reports/usage-web.html
@@ -33,7 +33,7 @@
                     <div class="dropdown">
                       <a class="dropdown-toggle" id="month-dd" role="button" data-toggle="dropdown" ng-disabled="_loading">
                         <div class="input-group">
-                          <input type="text" class="form-control" data-ng-model="month_year_symbol" ng-disabled="_loading">
+                          <input type="text" class="form-control" data-ng-model="month_year_symbol" disabled>
                           <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                         </div>
                       </a>
@@ -408,10 +408,10 @@
                   <tr>
                     <th style="width: 20%">Account</th>
                     <th class="text-right">Hits</th>
-                    <th class="text-right">Traffic sent</th>
-                    <th class="text-right">Traffic received</th>
-                    <th class="text-right">BW sent</th>
-                    <th class="text-right">BW received</th>
+                    <th class="text-right">Traffic Sent</th>
+                    <th class="text-right">Traffic Received</th>
+                    <th class="text-right">BW Sent</th>
+                    <th class="text-right">BW Received</th>
                     <th class="text-right">Active Domains</th>
                     <th class="text-right">Active Apps</th>
                   </tr>
