--- a/code/parts/ssl_certs/list.html
+++ b/code/parts/ssl_certs/list.html
@@ -85,10 +85,11 @@
                   <a href="" ng-click="order('cert_name')">Certificate Name</a>
                   <span class="sortorder" ng-show="filter.predicate === 'cert_name'" ng-class="{reverse: filter.reverse}"></span>
                 </th>
-                <th>Domains</th>
-                <!-- <th><a href="" ng-click="order('type')">Type</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'type'" ng-class="{reverse: filter.reverse}"></span></th> -->
-                <th>Expires At</th>
+
+                <th><a href="" ng-click="order('domains')">Domains</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'domains'" ng-class="{reverse: filter.reverse}"></span></th>
+                <th> <a href="" ng-click="order('expires_at')">Expires At</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'expires_at'" ng-class="{reverse: filter.reverse}"></span></th>
                 <th>
                   <a href="" ng-click="order('updated_at')">Last Update</a>
                   <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
@@ -119,7 +120,7 @@
                   <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit SSL Certificate">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </a>
-                  <a href="" ng-if="!item.loading" ng-click="deleteDomain(item)" tooltip="Delete SSL Certificate">
+                  <a href="" ng-if="!item.loading" ng-click="deleteSSL_cert(item)" tooltip="Delete SSL Certificate">
                     <i class="glyphicon glyphicon-trash"></i>
                   </a>
                 </td>
