--- a/code/parts/ssl_certs/new.html
+++ b/code/parts/ssl_certs/new.html
@@ -64,7 +64,7 @@
           <div class="form-group">
             <label for="cert_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Enter here a Private Key Password">Private Key Password</label>
             <div class="col-sm-10">
-              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.private_ssl_key_passphrase" id="private_ssl_key_passphrase" max="100" placeholder="Private Key Password">
+              <input type="text" class="form-control" ng-disabled="_loading" ng-model="model.private_ssl_key_passphrase" id="private_ssl_key_passphrase" max="100" placeholder="Private Key Password">
             </div>
           </div>
           <div class="form-group" ng-class="{ 'has-error': createForm.chain_ssl_cert.$invalid &&
