--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -167,6 +167,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/2fa.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/keys.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_certs.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/ssl_conf_profiles.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/apps.factory.js"></script>
 
 <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
